Test variable comparison in template
- Modified template.html to check if two variables refer to the same object using 'is'
- Updated 'testing' view to pass two sample lists (x and y) instead of member data

--- a/django/my_tennis_club/members/templates/template.html
+++ b/django/my_tennis_club/members/templates/template.html
@@ -3,9 +3,13 @@
 <body>
 
 <ul>
-  {% for x in mymembers %}
-    <li>{{ x.firstname }}</li>
-  {% endfor %}
+{% with var1=x var2=x %}
+  {% if var1 is var2 %}
+    <h1>YES</h1>
+  {% else %}
+    <h1>NO</h1>
+  {% endif %}
+{% endwith %}
 </ul>
 
 </body>
