Comment out variable comparison test in template and view
- Disabled 'is' comparison logic in template.html by wrapping in {% comment %}
- Removed context data from 'testing' view, rendering template without variables

--- a/django/my_tennis_club/members/templates/template.html
+++ b/django/my_tennis_club/members/templates/template.html
@@ -4,11 +4,11 @@
 
 <ul>
 {% with var1=x var2=x %}
-  {% if var1 is var2 %}
+  {% comment %} {% if var1 is var2 %} {% endcomment %}
     <h1>YES</h1>
-  {% else %}
+  {% comment %} {% else %} {% endcomment %}
     <h1>NO</h1>
-  {% endif %}
+  {% comment %} {% endif %} {% endcomment %}
 {% endwith %}
 </ul>
 
