Display Member list in template and update testing view
- Replaced placeholder content in template.html with a table showing ID, first name, and last name for each member.
- Modified testing() view to fetch all Member objects and pass them as 'mymembers' to the template.

--- a/django/my_tennis_club/members/templates/template.html
+++ b/django/my_tennis_club/members/templates/template.html
@@ -1,18 +1,14 @@
-<!DOCTYPE html>
-<html>
-<body>
-
-<ul>
-{% with var1=x var2=x %}
-  {% comment %} {% if var1 is var2 %} {% endcomment %}
-    <h1>YES</h1>
-  {% comment %} {% else %} {% endcomment %}
-    <h1>NO</h1>
-  {% comment %} {% endif %} {% endcomment %}
-{% endwith %}
-</ul>
-
-{% include 'footer.html' %} 
-
-</body>
-</html>
+<table border='1'>
+  <tr>
+    <th>ID</th>
+    <th>Firstname</th>
+    <th>Lastname</th>
+  </tr>
+  {% for x in mymembers %}
+    <tr>
+      <td>{{ x.id }}</td>
+        <td>{{ x.firstname }}</td>
+      <td>{{ x.lastname }}</td>
+    </tr>
+  {% endfor %}
+</table>
