feat(members, settings): add static file support with CSS styling
- Added `{% load static %}` and linked `myfirst.css` in template.html
- Wrapped members table in proper HTML structure
- Added WhiteNoise middleware in settings.py for serving static files
- Created members/static directory for CSS files

--- a/django/my_tennis_club/members/templates/template.html
+++ b/django/my_tennis_club/members/templates/template.html
@@ -1,3 +1,8 @@
+{% load static %}
+<!DOCTYPE html>
+<html>
+<link rel="stylesheet" href="{% static 'myfirst.css' %}">
+<body>
 <table border='1'>
   <tr>
     <th>ID</th>
@@ -12,3 +17,5 @@
     </tr>
   {% endfor %}
 </table>
+</body>
+</html>
